[package]
name = "plotters-example"
version = "0.1.0"
authors = ["kiyami <kiyami_erdim@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.2.12"
rand = "0.7.2"
itertools = "0.8.2"
rand_distr = "0.2.2"
criterion = "0.3.0"
rayon = "1.2.1"
rand_xorshift = "0.2.0"
num-traits = "0.2.10"
